    argument 'ordered' is renamed to 'other.ord' and accept the slot name or
    the slot number of the list to order genes by. The argument other.names is
    removed as names are obtained from the list.

0.4.9
  - Minor FIXES to plotting functions.
  - Added codelink.example to data directory. Contain an example object for
    Codelink class.
  - Added first version of a vignette.
  - Removed methods not actually used in bkgdCorrect.Codelink() until they
    become well implemented.
  - Intensity_cv slot renamed to CV.
  - FIX File_name and Sample_name slots subsetting in '[' method.

0.5.0
  - FIX arguments passed to htmlpage() in report.Codelink().
  - Some changes to plotting functions.

0.5.1
  - Project_name and Experiment_name are not stored now (as they could be very
    variable) but yet parsed by read.Codelink().
  - Removed dependence on Experiment_name and Project_name on plotting
    functions.
  - Rewrite of plotDensities.Codelink() as in plotCV.Codelink(), array
    argument changed to subset.
  - Improved codelink.example.
  - Improved vignette.

0.5.2
  - Support missing Sample Name in Codelink files. If no sample name suplied
    it is used the file name. Yet not support arbitrary long headers.

0.6.0
  - Mayor rework of read.Codelink(). Now allow different header files but of
    the same product type and chip size. New functions readHeader.Codelink(),
    dec.Codelink() and chipSize.Codelink().
  - FIXED some bugs in flag dependent assignment (missing flags).

0.7.0
  - Version pump to enter BioC devel repository.
  - Added biocViews slot to DESCRIPTION file.
  - Some output polish of read.Codelink().
  - FIX bug in determining if Bkgd_stdev column exists.
  - Added 'preserve' argument to read.Codelink() that preserve Bkgd_stdev
    slot.
  - Added 'verbose' argument to read.Codelink() to set the level of
    informative output.
  - FIX use of argument 'dec' on read.Codelink().